codigo para mostrar texto encriptado en pantalla

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
                  <input id="id-texto-ingresado" type="text" class="input-texto" >
 
                 <label for="textoResultado">Resultado:</label>
-                <input id="idTextoResultado" type="text" class="input-texto">
+                <textarea id="area-texto" rows="1" cols="40"></textarea>
             </div>
             <button id="idEncriptar" class="boton-encriptar">
                 ENCRIPTAR
