mejora en codigo encriptar. creacion funcion copiar

--- a/index.html
+++ b/index.html
@@ -26,6 +26,13 @@
       <input class="btn" type="submit" value="copiar" id="btn-copy">
     </section>
   </main>
+<footer>
+  <p>
+    <span>Author:</span>
+    Fabian Rodriguez
+  </p>
+
+</footer>
 
   <script src="js/script.js"></script>
   <script src="js/form.js"></script>
