correccion en validacion de texto

--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
       <form action="">
         <label for="input-texto">Solo letras minúsculas, sin acento</label>
         <input class="text-input" type="text" name="input-texto" id="input-texto" placeholder="Ingrese el texto aqui">
+        <label id="mensajes-errores" title="msg-error"></label>
         <input class="btn" type="submit" value="encriptar!" id="btn-encriptar">
         <input class="btn" type="submit" value="desencriptar!" id="btn-desencriptar">
       </form>
@@ -26,7 +27,7 @@
       <input class="btn" type="submit" value="copiar" id="btn-copy">
     </section>
   </main>
-<footer>
+<footer class="rodapie">
   <p>
     <span>Author:</span>
     Fabian Rodriguez
