diseño de pagina css y html

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-  <h1 class="titulo">código secreto</h1>
+  <h1 class="titulo">CÓDIGO SECRETO</h1>
 
   <main class="main">
     <section class="form box">
@@ -22,7 +22,7 @@
     </section>
   
     <section class="msg box">
-      <h2 id="">Mensaje encriptada:</h2>
+      <h2 id="input-texto">Mensaje encriptada:</h2>
       <input class="text-input" type="text" id="msg"></input>
       <input class="btn" type="submit" value="copiar" id="btn-copy">
     </section>
